Fix healthbar outline and alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,6 +84,7 @@ html {
 
 #alienHealth {
   position: absolute;
+  border: hidden;
   background: rgba(204, 102, 255, 0.6);
   -webkit-box-shadow: 0px 0px 15px 0px #cc66ff;
   -moz-box-shadow: 0px 0px 15px 0px #cc66ff;
@@ -104,6 +105,7 @@ html {
 
 #spaceshipHealth {
   position: absolute;
+  border: hidden;
   background: rgba(236, 19, 65, 0.6);
   -webkit-box-shadow: 0px 0px 15px 0px #ec1341;
   -moz-box-shadow: 0px 0px 15px 0px #ec1341;
